[gd_scene load_steps=2 format=3 uid="uid://di25hfxjvfugn"]

[ext_resource type="Script" path="res://scripts/ui/toolbar.gd" id="1_a4axe"]

[node name="Toolbar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_a4axe")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_type_variation = &"ToolbarPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "C:"

[node name="DiskSpaceBar" type="ProgressBar" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 16)
layout_mode = 2
size_flags_vertical = 4
show_percentage = false

[node name="DiskSpaceLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="EmptyButton" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Empty trash"

[node name="AntiVButton" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Antivirus"

[connection signal="pressed" from="PanelContainer/HBoxContainer/EmptyButton" to="." method="_on_empty_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/AntiVButton" to="." method="_on_anti_v_button_pressed"]
